--- a/css/index.css
+++ b/css/index.css
@@ -360,3 +360,103 @@ tr{
         padding: 10px 28px 10px 28px;
     }
 }
+
+/*odr css*/
+.odrContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 35px 35px 20px 35px;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.section {
+    background-color: #d5e3d8;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 10px;
+    flex: 1;
+    min-width: 280px;
+    max-width: 30%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.section-total{
+    background-color: #d5e3d8;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 10px;
+    flex: 1;
+    width: 100px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    background-color: #709289;
+    color: white;
+    padding: 10px;
+    margin: -20px -20px 20px -20px;
+    border-radius: 5px 5px 0 0;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group select {
+    width: 140px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #D9D9D9;
+}
+
+.btn-odr {
+    display: block;
+    width: auto;
+    padding: 10px;
+    background-color: #709289;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: left;
+    justify-content: left;
+}
+
+.btn:hover {
+    background-color: #3e5345;
+}
+
+.odr-table{
+    display: flex;
+    justify-content: center;
+    border-collapse: collapse;
+    padding: 15px;
+    background-color: #EDECEA;
+    margin: 30px 85px 0px 85px;
+    padding: 35px 35px 20px 35px;
+    border-radius: 8px;
+}
+table, th {
+    border: 2px solid #9E9495;
+    border-collapse: collapse;
+    padding: 15px;
+    background-color: #e2e2e2;
+    color: #0F4B3C;
+}
+table,tr{
+    border-radius: 8px;
+}
